# nautilus-desktop

./: meson.build  meson_options.txt
data/: org.gnome.nautilus.gschema.xml
eel/: eel-glib-extensions.h  eel-vfs-extensions.c  eel-vfs-extensions.h
src/: nautilus-canvas-container.c  nautilus-file-utilities.c  nautilus-file-utilities.h  nautilus-file.c  nautilus-global-preferences.h  nautilus-icon-names.h  nautilus-metadata.c  nautilus-metadata.h
